--- a/NearbyWeather/Base.lproj/Main.storyboard
+++ b/NearbyWeather/Base.lproj/Main.storyboard
@@ -224,7 +224,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="nlV-Vb-JpW" secondAttribute="height" multiplier="1:1" id="MDz-zk-hIb"/>
                                                 </constraints>
-                                                <state key="normal" image="Info">
+                                                <state key="normal" image="Map">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
                                                 <connections>
@@ -899,7 +899,7 @@
     </scenes>
     <resources>
         <image name="ExclamationMark" width="25" height="25"/>
-        <image name="Info" width="25" height="25"/>
+        <image name="Map" width="25" height="25"/>
         <image name="Reload" width="25" height="25"/>
         <image name="Settings" width="25" height="25"/>
         <image name="Sorting" width="25" height="25"/>
