--- a/NearbyWeather/Base.lproj/LaunchScreen.storyboard
+++ b/NearbyWeather/Base.lproj/LaunchScreen.storyboard
@@ -23,7 +23,7 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pen-3E-Fo5">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="0.12" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.19986817239999999" green="0.20395243169999999" blue="0.203938067" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nearbyweather_launchscreen_icon" translatesAutoresizingMaskIntoConstraints="NO" id="DI2-9o-wuS">
                                 <rect key="frame" x="112" y="258" width="150" height="150"/>
